--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.jpa.show-sql=true
 server.error.include-exception=false
 server.error.include-stacktrace=never
 server.error.include-message=always
+
+# SWAGGER
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui
+springdoc.swagger-ui.operationsSorter=method
