--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/parking
+spring.datasource.url=jdbc:postgresql:${POSTGRES_HOST://localhost:5432/parking}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.username=${POSTGRES_USERNAME:postgres}
+spring.datasource.password=${POSTGRES_PASSWORD:admin}
 
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.generate-ddl=true
